--- a/source/_data/page_welcome.yml
+++ b/source/_data/page_welcome.yml
@@ -1,9 +1,10 @@
 intro:
   main_title: "Welcome"
-  content_1: "I CSS sono uno degli strumenti più potenti, ed allo stesso tempo sottovalutati, del nuovo rinascimento del web. Nato come track del jsday e dallo stesso team organizzativo di Kerning, il containerday vuole dare una dignità alla tecnologia che rende tutti i siti più leggibili, interattivi ed anche belli da vedere."
+  content_1: "containerday è la principale conferenza italiana dedicata esclusivamente alle tecnologie di containerizzazione e virtualizzazione ed alle buone pratiche ad esse associate. Organizzata da <a href='https://grusp.org'>GrUSP</a>,
+  lo stesso team che organizza <a href='https://incontrodevops.it'>Incontro DevOps Italia</a>, la storica conferenza DevOps italiana, e le nuove conferenze dedicate a <a href='https://devsecopsday.it'>DevSecOps</a> e <a href='https://dxday.it'>Developer Experience</a>"
   content_2: "L'obiettivo dell'evento è consentire alla community di incontrarsi e condividere esperienze divertendosi e facendo rete in un contesto piacevole."
 # this is the global "read more" label
-readmore_label: "Leggi tutto" 
+readmore_label: "Leggi tutto"
 # these are the title and descriptions of the 6 blocks
 info_about:
   title: "About"
